[gd_scene load_steps=25 format=3 uid="uid://dr7ejytcij7vn"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_u51dr"]
[ext_resource type="Texture2D" uid="uid://bvm5kbky315q1" path="res://Art/survivalgame-enemy-slime.png" id="2_8m3o7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_61nap"]
atlas = ExtResource("2_8m3o7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx8vs"]
atlas = ExtResource("2_8m3o7")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cf04"]
atlas = ExtResource("2_8m3o7")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbvu3"]
atlas = ExtResource("2_8m3o7")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m21hy"]
atlas = ExtResource("2_8m3o7")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5504n"]
atlas = ExtResource("2_8m3o7")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88plw"]
atlas = ExtResource("2_8m3o7")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38nil"]
atlas = ExtResource("2_8m3o7")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djtfv"]
atlas = ExtResource("2_8m3o7")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0c6e"]
atlas = ExtResource("2_8m3o7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcexd"]
atlas = ExtResource("2_8m3o7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cnln"]
atlas = ExtResource("2_8m3o7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dypob"]
atlas = ExtResource("2_8m3o7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgjt3"]
atlas = ExtResource("2_8m3o7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jejm"]
atlas = ExtResource("2_8m3o7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfp3a"]
atlas = ExtResource("2_8m3o7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrjtm"]
atlas = ExtResource("2_8m3o7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plla0"]
atlas = ExtResource("2_8m3o7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nt4m6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61nap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx8vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cf04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbvu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m21hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5504n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88plw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38nil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djtfv")
}],
"loop": false,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0c6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcexd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cnln")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dypob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgjt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jejm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfp3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrjtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plla0")
}],
"loop": false,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_01ntf"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hlmw6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ocabr"]
radius = 241.0

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_u51dr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_nt4m6")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_01ntf")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_hlmw6")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_ocabr")

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0.878431, 0.117647, 0, 1)
offset_left = -5.0
offset_top = -10.0
offset_right = 95.0
offset_bottom = 17.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
